[package]
name = "cross-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.13.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.163"
tokio = { version = "1.28.0", features = ["full"] }
