[package]
name = "cross-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.7"
graphql_client = "0.13.0"
reqwest = { version = "0.11.18", features = ["json"] }
clap = { version = "4.2.5", features = ["cargo", "derive"] }
serde = "1.0.163"
serde_json = "1.0.99"
tokio = { version = "1.28.0", features = ["full"] }
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

